feat(api): update schemas and paths to use allow partial embeds
